# voice-talk

./: app.py  cdk.json  pyproject.toml  requirements.txt
config/component/dev/: ws_lambda.yml
config/modules/: apigatewayv2_alpha_ws_module.py  dynamodb_module.py  pyhton_alpha_pythonfunction_module.py
config/prod/components/: ws_apigateway.yml
config/test/: pipeline_ws.yml
config/test/components/: function_authorizer.yml  function_ws_connect_disconnect.yml  function_ws_text_chat.yml  table_auth.yml  table_dialogues.yml  table_ws_connections.yml  ws_connection_table.yml  ws_lambda.yml
config/test/lambda/: function_authorizer.yml  function_ws_connect_disconnect.yml  (+2 more)
frontend/: speech_to_text.html
lambdas/: connect_disconnect.py  connection_handler.py  test.py  text_chat.py
pipeline/: appication_stage.py  pipeline_stack.py
src/: test.py
stacks/: websocket_pipeline_stack.py
stacks/component/: dynamodb_table_stack.py  python_lambda_stack.py  test_lambda_stack.py  ws_api_gateway_stack.py
stacks/components/: dynamodb_table_stack.py  python_lambda_stack.py  ws_api_gateway_stack.py
stacks/pipeline/: test.py  test_pipeline_stack.py  websocket_pipeline_stack.py
stacks/structure/: ws_application_stack.py
stacks/structures/: ws_application_stack.py
talking3/: lambda_stack.py  pipeline_stack.py  talking3_stack.py
tests/unit/: test_talking3_stack.py
utils/: cdk_dynamodb.py  cdk_lambda.py
websocketApp/lambdas/: authorizer.py  text_chat.py  voice_chat.py
websocketApp/stacks/: dynamodb_table_stack.py  lambda_stack.py  websocket_applicatoin_stack.py
