[tool.poetry]
name = "talking3"
version = "0.1.0"
description = ""
authors = ["IPI-k-watanabe <k_watanabe@ipi.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.51.1"
constructs = "^10.1.170"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
